Improve code style with jdk 21.